added text shadow to  pfp on hover

--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -164,6 +164,10 @@ header {
     height: auto;
     cursor: pointer;
 }
+.pfp:hover, #pfp:hover {
+    -webkit-filter: drop-shadow(5px 5px 5px var(--text-shadow));
+    filter: drop-shadow(5px 5px 5px var(--text-shadow));
+}
 .dropbtn {
     cursor: pointer;
 }
