--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -164,7 +164,7 @@ header {
     height: auto;
     cursor: pointer;
     -webkit-filter: drop-shadow(5px 5px 5px var(--text-shadow));
-    filter: drop-shadow(0px 0px 10px var(--text-shadow));
+    filter: drop-shadow(0px 0px 10px var(--filter-color));
 }
 #pfp:hover {
     -webkit-filter: drop-shadow(5px 5px 5px var(--text-shadow));
