added drop shadow to pfp on hover

--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -163,12 +163,10 @@ header {
     width: 3em;
     height: auto;
     cursor: pointer;
-    -webkit-filter: drop-shadow(5px 5px 5px var(--text-shadow));
-    filter: drop-shadow(var(--text-shadow));
 }
 #pfp:hover {
-    -webkit-filter: drop-shadow(5px 5px 5px var(--text-shadow));
-    filter: drop-shadow(5px 5px 5px var(--text-shadow));
+    -webkit-filter: drop-shadow(var(--text-shadow));
+    filter: drop-shadow(var(--text-shadow));
 }
 .dropbtn {
     cursor: pointer;
