--- a/css/home_theme.css
+++ b/css/home_theme.css
@@ -144,6 +144,9 @@
 .project-title h2 {
     text-align: center;
 }
+.project-title a {
+    text-decoration: none;
+}
 .summary {
     width: 100%;
     height: 10.2em;
