--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -112,11 +112,11 @@ html {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: flex-end;
     }
     .navContent a {
         text-decoration: none;
         color: var(--text-color);
-        padding-bottom: 0.5em;
+        padding-bottom: 1em;
     }
 }
