--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -133,12 +133,22 @@ html {
     .user {
         display: flex;
         justify-content: flex-end;
-        padding: 0.7em 1em;
+        padding: 0.7em 1em 0em 0em;
     }
     .user img{
         width: 3em;
+        z-index: 2;
         height: fit-content;
         cursor: pointer;
+    }
+    .userDropdown {
+        display: none;
+    }
+    .userContent {
+        position: relative;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
     }
 }
 .show {
