--- a/css/profile_theme.css
+++ b/css/profile_theme.css
@@ -167,6 +167,9 @@
     flex-direction: row;
     gap: 4em;
 }
+.current-content a {
+    text-decoration: none;
+}
 .current-content img {
     width: 8em;
     height: auto;
