--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -78,6 +78,34 @@ html {
 * {
     box-sizing: border-box;
 }
+.slide {
+    animation: slide 0.3s linear 0s 1 normal forwards;
+}
+@keyframes slide {
+	0% {
+		opacity: 0;
+		transform: translateX(-250px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+/* .close {
+    animation: close 0.3s linear 0s 1 normal backwards;
+}
+@keyframes close {
+	0% {
+        opacity: 1;
+		transform: translateX(0);
+	}
+
+	100% {
+		opacity: 0;
+		transform: translateX(-250px);
+	}
+} */
 
 @media only screen and (min-width: 200px) {
     body {
@@ -149,6 +177,10 @@ html {
         z-index: 1;
         display: flex;
         flex-direction: column;
+    }
+    .dropdown-icon {
+        width: 1em;
+        height: fit-content;
     }
 }
 .show {
