--- a/css/login_theme.css
+++ b/css/login_theme.css
@@ -180,6 +180,12 @@
     justify-content: center;
     align-items: center;
 }
+.forget-inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* width: 100%; */
+}
 #forget-email {
     background-color: var(--background-color);
     border-color: var(--accent-3);
