--- a/css/login_theme.css
+++ b/css/login_theme.css
@@ -166,6 +166,15 @@
     margin: 1em 1em;
     cursor: pointer;
 }
+#submit-btn {
+    width: 6em;
+    height: 3em;
+    background-color: var(--accent-2);
+    border-color: transparent;
+    border-radius: 16px;
+    /* margin: 1em 1em; */
+    cursor: pointer;
+}
 .button-wrapper {
     width: 100%;
 }
