--- a/css/login_theme.css
+++ b/css/login_theme.css
@@ -172,7 +172,7 @@
     background-color: var(--accent-2);
     border-color: transparent;
     border-radius: 16px;
-    /* margin: 1em 1em; */
+    margin: 0em 1em;
     cursor: pointer;
 }
 .button-wrapper {
