--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -425,3 +425,14 @@ button:active {
     align-content: center;
     text-align: center;
 }
+.reset-success-wrapper {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10em;
+}
+#reset-success {
+    font-size: 50px;
+}
