--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -290,6 +290,7 @@ footer {
     margin: 1em 0em 0em 0.5em;
     font-size: 20px;
     display: flex;
+    justify-content: space-between;
     gap: 1.5em;
     margin-top: auto;
 }
