--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -293,7 +293,7 @@ footer {
     justify-content: space-between;
     gap: 1.5em;
     border-top: 2px solid var(--accent-3);
-    /* margin-top: 0.5em; */
+    padding: 0.5em 0;
 }
 .fuck-you {
     display: flex;
