--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -291,7 +291,7 @@ footer {
     font-size: 20px;
     display: flex;
     justify-content: space-between;
-    gap: 1.5em;
+    /* gap: 1.5em; */
     border-top: 2px solid var(--accent-3);
     padding: 0.5em 0;
 }
