--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -290,8 +290,8 @@ footer {
     margin: 2em 1em 0em 1em;
     font-size: 20px;
     display: flex;
-    justify-content: space-between;
-    /* gap: 1.5em; */
+    justify-content: center;
+    gap: 1.5em;
     border-top: 2px solid var(--accent-3);
     padding: 0.5em 0;
 }
