--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -295,7 +295,7 @@ footer {
     align-items: center;
     gap: 1.5em;
     border-top: 2px solid var(--accent-3);
-    padding: 1.5em 0 0 0;
+    padding: 1.5em 0;
 }
 .fuck-you {
     display: flex;
