--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -290,7 +290,7 @@ footer {
     margin: 1em 1em 0em 1em;
     font-size: 20px;
     display: flex;
-    flex-direction: row-reverse;
+    /* flex-direction: row-reverse; */
     /* justify-content: center; */
     align-items: center;
     gap: 1.5em;
