--- a/css/home_theme.css
+++ b/css/home_theme.css
@@ -176,7 +176,7 @@
     margin: 0px 0.8em 3.5em;
 }
 #updateBadges {
-    display: block;
+    display: flex;
     text-align: center;
     font-size: 20px;
     margin-bottom: 1em;
