--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -291,7 +291,7 @@ footer {
     font-size: 20px;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     /* gap: 4em; */
     border-top: 2px solid var(--accent-3);
