--- a/css/EWG_theme.css
+++ b/css/EWG_theme.css
@@ -105,7 +105,7 @@ h1, h2 {
 p {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
-    display: inline;
+    /*display: inline;*/
 }
 header {
     display:flex;
