added current project section

--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -69,8 +69,9 @@
 html {
     scroll-behavior: smooth;
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
     margin: 0;
+    padding: 0;
 }
 .pulse {
     transition: all 0.2s ease;
