--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -70,6 +70,7 @@
         grid-template-rows: auto auto auto;
         row-gap: 0.5em;
         padding: 0.5em;
+        margin-top: 1em;
     }
     #area-title {
         text-align: center;
