--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -71,7 +71,7 @@
         grid-template-rows: auto auto auto;
         row-gap: 0.5em;
         padding: 0.5em;
-        margin-top: 1em;
+        margin: 1em 0;
     }
     #area-title {
         text-align: center;
@@ -100,5 +100,12 @@
         justify-content: center;
         align-items: center;
         gap: 1em;
+        border-top: 2px solid var(--accent-3);
+        padding: 1em 0.5em;
+        background-color: var(--accent-1);
+    }
+    #badge-title {
+        grid-column: span 5;
+        justify-self: center;
     }
 }
