--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -69,7 +69,7 @@
         align-items: center;
         grid-template-columns: auto auto;
         grid-template-rows: auto auto auto;
-        row-gap: 0.5em;
+        row-gap: 1em;
         padding: 0.5em;
         margin: 1em 0;
     }
@@ -82,13 +82,13 @@
         /* grid-row: 2 / span 1; */
     }
     #project-img img{
-        width: 6em;
+        width: 8em;
         height: fit-content;
     }
     #project-title {
         text-align: center;
         grid-column: span 2;
-        justify-self: start;
+        /* justify-self: start; */
     }
     #project-summary {
         justify-self: center;
@@ -99,7 +99,7 @@
         grid-template-columns: auto auto auto auto auto;
         justify-content: center;
         align-items: center;
-        gap: 1em;
+        gap: 1.5em 1em;
         border-top: 2px solid var(--accent-3);
         padding: 1em 0.5em;
         background-color: var(--accent-1);
