--- a/mobile-friendly/mf-css/progressBar.css
+++ b/mobile-friendly/mf-css/progressBar.css
@@ -73,7 +73,7 @@
         flex-direction: column;
         align-items: center;
         background-color: var(--accent-1);
-        width: 93%;
+        width: 90%;
         height: fit-content;
         border-radius: 12px;
         padding: 0.5em 0;
@@ -122,5 +122,10 @@
     }
     #edit-pb {
         font-size: 24px;
+    }
+}
+@media only screen and (min-width: 326px) {
+    .pb-background {
+        width: 93%;
     }
 }
