--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -269,6 +269,15 @@ a {
     }
 }
 @media only screen and (min-width: 326px) {
+    h1 {
+        font-size: 38px;
+    }
+    h2 {
+        font-size: 32px;
+    }
+    p {
+        font-size: 24px;
+    }
     .badge {
         width: 4em;
         height: fit-content;
