--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -260,7 +260,7 @@ a {
         grid-template-columns: auto auto;
         justify-content: space-around;
         gap: 0.5em;
-        padding: 1em 0;
+        padding: 1em 0.5em;
         border-top: 2px solid var(--accent-3);
     }
     #logo-link {
