--- a/mobile-friendly/mf-css/progressBar.css
+++ b/mobile-friendly/mf-css/progressBar.css
@@ -129,3 +129,12 @@
         width: 93%;
     }
 }
+@media only screen and (min-width: 720px) {
+    .progress-info-wrapper {
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .added {
+        margin-top: 0.3em;
+    }
+}
