--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -111,9 +111,9 @@ a {
 		transform: translateX(0);
 	}
 }
-.slide-left {
+/* .slide-left {
     animation: slide-left 0.3s linear 0s 1 normal forwards;
-}
+} */
 @keyframes slide-left {
 	0% {
 		opacity: 0;
