--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -111,13 +111,13 @@ a {
 		transform: translateX(0);
 	}
 }
-/* .slide-left {
+.slide-left {
     animation: slide-left 0.3s linear 0s 1 normal forwards;
-} */
+}
 @keyframes slide-left {
 	0% {
 		opacity: 0;
-		transform: translateX(250px);
+		transform: translateX(350px);
 	}
 
 	100% {
