--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -132,3 +132,9 @@
         gap: 2em 1.5em  ;
     }
 }
+@media only screen and (min-width: 900px) {
+    .main-wrapper {
+        display: flex;
+        flex-direction: row;
+    }
+}
