--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -138,8 +138,10 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        margin-top: 1em;
     }
     .badge-container {
+        width: 50%;
         background-color: var(--background-color);
         border-top: none;
         border-left: 2px solid var(--accent-3);
