--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -132,13 +132,17 @@
         gap: 2em 1.5em  ;
     }
 }
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 1000px) {
     .main-wrapper {
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         margin-top: 1em;
+    }
+    #project-img img{
+        width: 10   em;
+        height: fit-content;
     }
     .badge-container {
         width: 50%;
