--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -305,11 +305,16 @@ a {
     footer {
         display: flex;
     }
-    /* #logo-link {
-        grid-column: 1;
-    } */
     #copyright, #contact, #logo-link {
         font-size: 18px;
+    }
+}
+@media only screen and (min-width: 1000px) {
+    .navMenu {
+        width: 15%;
+    }
+    .userDropdown {
+        width: 10%;
     }
 }
 .show {
