--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -317,6 +317,57 @@ a {
         width: 12%;
     }
 }
+@media only screen and (min-width: 1200px) {
+    header {
+        display:flex;
+        flex-wrap: nowrap;
+        align-items:center;
+        width: 100%;
+        height: 4em;
+        margin: 0 0 1em 0;
+        top: 0;
+        background-color: var(--accent-1);
+        position: sticky;
+        z-index: 3;
+    }
+    .logo img{
+        display: block;
+        width: 5em;
+        height: auto;
+        margin-left: 1em;
+    }
+    nav {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
+    }
+    .nav-bar {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
+    }
+    .navContent {
+        flex: 1;
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        align-items:center;
+        justify-content: space-evenly;
+    }
+    .navContent > a {
+        font-size: 2em;
+        color: var(--text-color);
+        padding: 0 2em;
+    }
+    .navContent > a:last-child {
+        color: var(--accent-3);
+    }
+    .mobileNav, .navMenu, .project-dropDown-wrapper, .user {
+        display: none;
+    }
+}
 .show {
     display: block;
 }
