changed the order of the foot contents

--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -268,7 +268,7 @@ a {
     #copyright, #contact, #logo-link {
         font-size: 14px;
     }
-    #logo-link {
+    #contact {
         grid-column: span 2;
         justify-self: center;
     }
