--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -61,6 +61,11 @@
         --text-shadow: 0px 0px 10px var(--accent-2);
         --warning: #b80303;
     }
+.input {
+    background-color: var(--background-color);
+    border: 2px solid var(--accent-3);
+    color: var(--accent-2);
+}
 @media only screen and (min-width: 200px) {
     .login-wrapper {
         display: flex;
@@ -78,7 +83,7 @@
         border-radius: 12px;
         border: 2px solid var(--accent-3);
         width: 80%;
-        height: 50%;
+        height: fit-content;
         padding: 1em;
     }
     #login-title {
@@ -88,5 +93,43 @@
     form {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        /* align-items: center; */
+        gap: 0.3em;
+        margin: 1em 0;
+        width: 70%;
+    }
+    .input {
+        width: 100%;
+        height: 2.7em;
+        margin: 0.5em 0;
+    }
+    .checkbox-wrapper {
+        padding: 0 0 0 1em;
+        margin: 0 0 1em 0;
+    }
+    .checkbox {
+        background-color: var(--accent-3);
+        accent-color: var(--accent-2);
+    }
+    .button {
+        display: flex;
+        justify-content: center;
+    }
+    #submit {
+        width: 8em;
+        height: 3em;
+        background-color: var(--accent-2);
+        border-color: transparent;
+        border-radius: 16px;
+        margin: 1em 1em;
+        cursor: pointer;
+    }
+    .forgot-password {
+        display: flex;
+        flex-direction: column;
+    }
+    .forgot-password > a {
+        padding: 0.5em 0;
     }
 }
