--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -128,6 +128,9 @@
     .forgot-password {
         display: flex;
         flex-direction: column;
+        width: 100%;
+        align-items: flex-start;
+        padding: 0 2em;
     }
     .forgot-password > a {
         padding: 0.5em 0;
