--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -152,3 +152,8 @@
         justify-content: space-evenly;
     }
 }
+@media only screen and (min-width: 1200px) {
+    .login-container {
+        width: 40%;
+    }
+}
