--- a/mobile-friendly/mf-css/announcements.css
+++ b/mobile-friendly/mf-css/announcements.css
@@ -71,13 +71,12 @@
         width: 100%;
         height: 70vh;
         justify-content: center;
-        align-items: center;
+        /* align-items: center; */
     }
     .announce-contents{
         display: flex;
         flex-direction: column;
         width: 70%;
-        justify-content: center;
         align-items: center;
     }
     .announce-contents h2 {
@@ -86,18 +85,18 @@
     }
     .announce-contents p {
     font-size: 20px;
-}
+    }
+    .sign-off {
+    display: flex;
+    margin: 1em 0;
+    width: 100%;
+    justify-content: flex-end;
+    }
 }
 @media only screen and (min-width: 720px) {
     .announce-contents p {
         font-size: 24px;
     }
-}
-.sign-off {
-    display: flex;
-    margin: 1em 0;
-    width: 100%;
-    justify-content: flex-end;
 }
 .hide {
     display: none;
