--- a/mobile-friendly/mf-css/announcements.css
+++ b/mobile-friendly/mf-css/announcements.css
@@ -69,7 +69,7 @@
     .announce-container {
         display: flex;
         width: 100%;
-        height: 70vh;
+        height: 100%;
         justify-content: center;
         /* align-items: center; */
     }
