--- a/mobile-friendly/mf-css/announcements.css
+++ b/mobile-friendly/mf-css/announcements.css
@@ -69,7 +69,7 @@
     .announce-container {
         display: flex;
         width: 100%;
-        height: 100%;
+        height: 70vh;
         justify-content: center;
         /* align-items: center; */
     }
@@ -77,6 +77,7 @@
         display: flex;
         flex-direction: column;
         width: 90%;
+        height: fit-content;
         align-items: center;
     }
     .announce-contents h2 {
