--- a/mobile-friendly/mf-css/announcements.css
+++ b/mobile-friendly/mf-css/announcements.css
@@ -101,6 +101,11 @@
         height: 90vh;
     }
 }
+@media only screen and (min-width: 1000px) {
+    .announce-container {
+        height: 70vh;
+    }
+}
 .hide {
     display: none;
 }
