--- a/mobile-friendly/mf-css/about.css
+++ b/mobile-friendly/mf-css/about.css
@@ -65,11 +65,11 @@
     .about-wrapper {
         display: flex;
         flex-direction: column;
-        /* justify-content: center; */
         align-items: center;
         text-align: center;
         padding: 1em;
         height: 100%;
+        margin-bottom: 1.5em;
     }
     .about-content {
         margin: 1em 0;
