--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -389,6 +389,7 @@ a {
     .projects-dropdown {
         display: none;
         position: absolute;
+        translate: 0 8em;
         z-index: 1;
         background-color: var(--accent-1);
         border: 2px solid var(--accent-3);
@@ -423,15 +424,26 @@ a {
         border-radius: 0 0 10px 10px;
     }
     .user-content {
-        translate: -6em 10em;
-        /* width: 15em; */
+        translate: -2.5em 7.8em;
+        width: 10em;
     }
     .user-content a {
-        padding: 0;
+        padding: 0.5em 0;
+        font-size: 1.7em;
+    }
+    .user-content a:hover {
+        background-color: var(--accent-3);
+        color: var(--reverse-text-color);
     }
     .desktop-user:hover .user-content {
         display: flex;
         flex-direction: column;
+    }
+    .user-content a:hover:first-child {
+        border-radius: 10px 10px 0 0;
+    }
+    .user-content a:hover:last-child {
+        border-radius: 0 0 10px 10px;
     }
     #login {
         color: var(--accent-3);
