--- a/mobile-friendly/mf-css/newProject.css
+++ b/mobile-friendly/mf-css/newProject.css
@@ -85,9 +85,43 @@
         flex-direction: column;
         width: 90%;
     }
+    label {
+        font-size: 1.3em;
+    }
+    input, select, textarea{
+        background-color: var(--accent-1);
+        color: var(--text-color);
+        border: var(--accent-2) solid 2px;
+        border-radius: 4px;
+        accent-color: var(--background-color);
+    }
+    input, select {
+        height: 2.5em;
+    }
     .input-section {
+        display: grid;
+        grid-template-columns: 35% 65%;
+        row-gap: 0.5em;
+        margin: 1em 0;
+        /* grid-template-rows: auto auto; */
+    }
+    .checkbox-wrapper {
         display: flex;
-        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    #noEndDate {
+        margin-left: 1em;
+    }
+    .noEndDate {
+        font-size: 0.8em;
+    }
+    .checkbox-wrapper, #recommend, .summary {
+        grid-column: span 2;
+    }
+    #summary {
+        height: 10em;
+        resize: vertical;
     }
     .submit {
         grid-column: span 2;
