--- a/mobile-friendly/mf-css/newProject.css
+++ b/mobile-friendly/mf-css/newProject.css
@@ -94,6 +94,7 @@
         border: var(--accent-2) solid 2px;
         border-radius: 4px;
         accent-color: var(--background-color);
+        padding: 8px;
     }
     input, select {
         height: 2.5em;
@@ -135,6 +136,48 @@
     }
     #summary {
         height: 12em;
+    }
+}
+@media only screen and (min-width: 1200px) {
+    .new-project-container {
+        flex-direction: row;
+        justify-content: center;
+    }
+    .input-section, .preview-section {
+        width: 50%;
+        margin: 0 0.5em;
+    }
+    form {
+        width: 80%;
+        flex-direction: row;
+    }
+    .input-section {
+        padding-top: 1em;
+    }
+    label {
+        font-size: 1.5em;
+    }
+    input, select {
+        height: 2.9em;
+    }
+    .noEndDate {
+        font-size: 1em;
+    }
+    #summary {
+        height: 14em;
+    }
+    .preview-section {
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-template-rows: auto auto auto auto;
+    }
+    .preview-section h1 {
+        grid-column: span 2;
+    }
+    .preview-section img {
+        width: 10em;
+        height: auto;
+        grid-row: span 3;
     }
 }
 input:invalid {
