--- a/mobile-friendly/mf-css/newProject.css
+++ b/mobile-friendly/mf-css/newProject.css
@@ -123,6 +123,14 @@
         height: 10em;
         resize: vertical;
     }
+    .preview-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .preview-section img {
+        width: 10em;
+    }
     .submit {
         grid-column: span 2;
     }
@@ -144,12 +152,16 @@
         justify-content: center;
     }
     .input-section, .preview-section {
-        width: 50%;
+        width: 45%;
         margin: 0 0.5em;
+    }
+    .preview-section {
+        width: 45%;
     }
     form {
         width: 80%;
         flex-direction: row;
+        justify-content: space-evenly;
     }
     .input-section {
         padding-top: 1em;
@@ -168,8 +180,14 @@
     }
     .preview-section {
         display: grid;
-        grid-template-columns: 30% 70%;
-        grid-template-rows: auto auto auto auto;
+        justify-content: center;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto 10% auto auto auto 30%;
+        column-gap: 1em;
+
+        background-color: var(--accent-1);
+        border: 2px solid var(--accent-2);
+        border-radius: 8px;
     }
     .preview-section h1 {
         grid-column: span 2;
@@ -177,7 +195,24 @@
     .preview-section img {
         width: 10em;
         height: auto;
-        grid-row: span 3;
+        grid-row: span 4;
+        justify-self: center;
+    }
+    .grid-item {
+        display: grid;
+        grid-template-columns: 40% 60%;
+        align-items: center;
+        /* justify-content: space-evenly; */
+    }
+    .grid-item span {
+        justify-self: center;
+    }
+    .grid-item:last-child {
+        grid-column: span 2;
+        display: flex;
+        flex-direction: column;
+        justify-self: start;
+        /* align-self: start; */
     }
 }
 input:invalid {
