--- a/mobile-friendly/mf-css/newProject.css
+++ b/mobile-friendly/mf-css/newProject.css
@@ -88,7 +88,7 @@
     label {
         font-size: 1.3em;
     }
-    input, select, textarea{
+    .input, select, textarea{
         background-color: var(--accent-1);
         color: var(--text-color);
         border: var(--accent-2) solid 2px;
@@ -96,7 +96,7 @@
         accent-color: var(--background-color);
         padding: 8px;
     }
-    input, select {
+    .input, select {
         height: 2.5em;
     }
     .input-section {
@@ -124,15 +124,49 @@
         resize: vertical;
     }
     .preview-section {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        justify-content: space-evenly;
+        row-gap: 1em;
+
+        background-color: var(--accent-1);
+        border: 2px solid var(--accent-2);
+        border-radius: 4px;
+        padding: 0.5em 0.5em 1em 0.5em;
+    }
+    .preview-section h1 {
+        grid-column: span 3;
     }
     .preview-section img {
-        width: 10em;
+        width: 8em;
     }
-    .submit {
+    .preview-section h2 {
         grid-column: span 2;
+        justify-self: center;
+        text-align: center;
+    }
+    .grid-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .grid-item:last-child {
+        grid-column: span 3;
+    }
+    .button {
+        display: flex;
+        justify-content: end;
+    }
+    #submit {
+        width: 8em;
+        height: 3em;
+        font-weight: 600;
+        background-color: var(--accent-3);
+        border-color: transparent;
+        border-radius: 16px;
+        margin: 1em 1em;
+        cursor: pointer;
     }
 }
 @media only screen and (min-width: 720px) {
