put margin back

--- a/mobile-friendly/mf-css/newProject.css
+++ b/mobile-friendly/mf-css/newProject.css
@@ -108,7 +108,7 @@
         grid-template-columns: 35% 65%;
         align-items: center;
         row-gap: 0.5em;
-        /* margin: 1em 0 2em 0; */
+        margin: 1em 0 2em 0;
     }
     .checkbox-wrapper {
         display: flex;
