--- a/mobile-friendly/mf-css/newProject.css
+++ b/mobile-friendly/mf-css/newProject.css
@@ -164,6 +164,7 @@
     .button {
         display: flex;
         justify-content: end;
+        margin-bottom: 1em;
     }
     #submit {
         width: 8em;
