--- a/mobile-friendly/mf-css/newProject.css
+++ b/mobile-friendly/mf-css/newProject.css
@@ -62,6 +62,21 @@
         --warning: #b80303;
     }
 @media only screen and (min-width: 200px) {
+    .archive-warning {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 0.5em 1em;
+
+        background-color: var(--warning);
+        color: var(--reverse-text-color);
+    }
+    .archive-warning a {
+        color: var(--accent-2);
+        text-decoration: underline;
+        cursor: pointer;
+    }
     .new-project-wrapper {
         display: flex;
         flex-direction: column;
