--- a/mobile-friendly/mf-css/newProject.css
+++ b/mobile-friendly/mf-css/newProject.css
@@ -178,6 +178,9 @@
         justify-content: end;
         margin-bottom: 1em;
     }
+    #cancel {
+        display: none;
+    }
     #submit {
         width: 8em;
         height: 3em;
@@ -208,18 +211,13 @@
         justify-content: center;
     }
     .input-section, .preview-section {
-        /* width: 45%; */
         margin: 0 0.5em;
     }
-    /* .preview-section {
-        width: 45%;
-    } */
     form {
         width: 80%;
-        /* flex-direction: row;
-        justify-content: space-evenly; */
         grid-template-columns:50% 50%;
         grid-template-rows: auto auto;
+        row-gap: 1em;
     }
     .input-section {
         padding-top: 1em;
@@ -236,7 +234,7 @@
     #summary {
         height: 14em;
     }
-    .preview-section {
+    /* .preview-section {
         display: grid;
         justify-content: center;
         grid-template-columns: auto auto;
@@ -259,9 +257,9 @@
     .grid-item {
         display: grid;
         grid-template-columns: 40% 60%;
-        align-items: center;
+        align-items: center; */
         /* justify-content: space-evenly; */
-    }
+    /* }
     .grid-item span {
         justify-self: center;
     }
@@ -269,14 +267,23 @@
         grid-column: span 2;
         display: flex;
         flex-direction: column;
-        justify-self: start;
+        justify-self: start; */
         /* align-self: start; */
-    }
+    /* } */
     .button {
         grid-column: span 2;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 2em;
+    }
+    #cancel {
+        display: block;
     }
 }
 input:invalid {
   border: var(--warning) solid 3px;
   /* accent-color: var(--accent-2); */
+}
+.hide {
+    display: none;
 }
