--- a/mobile-friendly/mf-css/progressBar.css
+++ b/mobile-friendly/mf-css/progressBar.css
@@ -1,4 +1,15 @@
 :root,
+    :root.dark0 {
+        --background-color: #1e202c;
+        --text-color: #bfc0d1;
+        --reverse-text-color: #1e202c;
+        --accent-1: #31323c;
+        --accent-2: #bfc0d1;
+        --accent-3: #60519b;
+        --filter-color: #dda7ff7e;
+        --box-shadow: 0px 0px 15px #dda7ff7e;
+        --warning: #b80303;
+    }
     /* dark theme number 1 */
     :root.dark1 {
         --background-color: #24184b;
