--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -1,4 +1,15 @@
 :root,
+    :root.dark0 {
+        --background-color: #1e202c;
+        --text-color: #bfc0d1;
+        --reverse-text-color: #1e202c;
+        --accent-1: #31323c;
+        --accent-2: #60519b;
+        --accent-3: #60519b;
+        --filter-color: #dda7ff7e;
+        --box-shadow: 0px 0px 15px #dda7ff7e;
+        --warning: #b80303;
+    }
     /* dark theme number 1 */
     :root.dark1 {
         --background-color: #24184b;
@@ -374,11 +385,15 @@ a {
         padding: 0 2em;
         text-decoration: none;
     }
+    /* .desktop-navContent:nth-child(2) {
+        height: 100%;
+    } */
     .projects-container {
         display: flex;
         position: relative;
         justify-content: center;
         align-items: center;
+        height: 3.5em;
     }
     .desktop-user {
         display: flex;
@@ -389,7 +404,7 @@ a {
     .projects-dropdown {
         display: none;
         position: absolute;
-        translate: 0 8em;
+        translate: 0 7em;
         z-index: 1;
         background-color: var(--accent-1);
         border: 2px solid var(--accent-3);
