--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -4,26 +4,26 @@
         --text-color: #bfc0d1;
         --reverse-text-color: #1e202c;
         --accent-1: #31323c;
-        --accent-2: #60519b;
+        --accent-2: #bfc0d1;
         --accent-3: #60519b;
         --filter-color: #dda7ff7e;
         --box-shadow: 0px 0px 15px #dda7ff7e;
         --warning: #b80303;
     }
     /* dark theme number 1 */
-    :root.dark1 {
+    /* :root.dark1 {
         --background-color: #24184b;
         --text-color: #dda7ff;
         --reverse-text-color: #24184b;
         --accent-1: #563d76;
-        --accent-2: #c99c23;
+        --accent-2: #fbd160;
         --accent-3: #1b85a6;
         --filter-color: #dda7ff7e;
         --box-shadow: 0px 0px 15px #dda7ff7e;
         --warning: #b80303;
-    }
+    } */
     /*dark theme number 2 */
-    :root.dark2 {
+    /* :root.dark2 {
         --background-color: #2f1f45;
         --text-color: #f9e7e7;
         --reverse-text-color: #2f1f45;
@@ -33,9 +33,9 @@
         --filter-color: #f9e7e77e;
         --box-shadow: 0px 0px 15px #f9e7e77e;
         --warning: #b80303;
-    }
+    } */
     /*dark theme number 3*/
-    :root.dark3 {
+    /* :root.dark3 {
         --background-color: #312257;
         --text-color: #f9dbbd;
         --reverse-text-color: #312257;
@@ -44,6 +44,17 @@
         --accent-3: #3c7e85;
         --filter-color: #f9dbbd7e;
         --box-shadow: 0px 0px 15px #f9dbbd7e;
+        --warning: #b80303;
+    } */
+    :root.light0 {
+        --background-color: #bfc0d1;
+        --text-color: #1e202c;
+        --reverse-text-color: #bfc0d1;
+        --accent-1: #60519b;
+        --accent-2: #31323c;
+        --accent-3: #60519b;
+        --filter-color: #dda7ff7e;
+        --box-shadow: 0px 0px 15px #dda7ff7e;
         --warning: #b80303;
     }
     /* light theme number 1 */
@@ -71,7 +82,7 @@
         --box-shadow: 5px 5px 12px #2e1f607e;
         --text-shadow: 0px 0px 10px var(--accent-2);
         --warning: #b80303;
-    }
+    }   
 
 /* @font-face {
     font-family: Luminari;
@@ -385,21 +396,20 @@ a {
         padding: 0 2em;
         text-decoration: none;
     }
-    /* .desktop-navContent:nth-child(2) {
-        height: 100%;
-    } */
     .projects-container {
         display: flex;
         position: relative;
         justify-content: center;
         align-items: center;
         height: 3.5em;
+        cursor: default;
     }
     .desktop-user {
         display: flex;
         position: relative;
         justify-content: center;
         align-items: center;
+        height: 3.5em;
     }
     .projects-dropdown {
         display: none;
@@ -439,7 +449,7 @@ a {
         border-radius: 0 0 10px 10px;
     }
     .user-content {
-        translate: -4em 7.8em;
+        translate: -4em 7.2em;
         width: 10em;
     }
     .user-content a {
@@ -471,6 +481,12 @@ a {
         justify-content: center;
         text-align: center;
         margin: 0.5em 0 1em 0;
+    }
+}
+
+@media only screen and (min-width: 1500px) {
+    .user-content {
+        translate: 0em 7.2em;
     }
 }
 .show {
