--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -1,5 +1,5 @@
 :root,
-    :root.dark0 {
+    /* :root.dark0 {
         --background-color: #31323c;
         --text-color: #bfc0d1;
         --reverse-text-color: #31323c;
@@ -9,7 +9,7 @@
         --filter-color: #dda7ff7e;
         --box-shadow: 0px 0px 15px #dda7ff7e;
         --warning: #b80303;
-    }
+    } */
     :root.dark0 {
         --background-color: #1e202c;
         --text-color: #bfc0d1;
